<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="fill_horizontal"
    android:baselineAligned="false">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:layout_gravity="fill_horizontal"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/notification_icon"
            android:drawablePadding="6dp"
            android:paddingStart="6dp"
            android:paddingTop="12dp"
            android:paddingEnd="8dp"
            android:text="@string/app_name"
            android:contentDescription="@string/app_name"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="right">

        <ImageButton
            android:id="@+id/downButton"
            android:layout_width="42dp"
            android:layout_height="46dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/lower_volume"
            android:src="@drawable/ic_minus"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/upButton"
            android:layout_width="42dp"
            android:layout_height="46dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/increase_volume"
            android:src="@drawable/ic_plus"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="42dp"
            android:layout_height="46dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_baseline_play_arrow_24"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="42dp"
            android:layout_height="46dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/pause"
            android:src="@drawable/ic_baseline_pause_24"
            android:textColor="#FFFFFF" />

        <ImageButton
            android:id="@+id/dismissButton"
            android:layout_width="42dp"
            android:layout_height="46dp"
            android:layout_marginStart="2dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/dismiss"
            android:src="@drawable/ic_baseline_close_24"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>